# RecDeltri

./: 20_module_test.json  CMakeLists.txt  README.md  example.py  skeleton.wkt
resources/: 100_module_test.json  40_module_test.json  60_module_test.json  80_module_test.json
src/: bindings.cc  example.cpp  galaxy.hpp  hierarchic_skeleton.hpp  hierarchic_straight_skeleton_2.hpp  simple_join.hpp  simplify_polygon.hpp  straight_skeleton_2.hpp  test_hier_skel.cpp
